# maeva_prospect_engine_enligne

./: .gitignore  README.md  app.py  daily_plan.py  export_excel_pack.py  export_lead_pack.py  followups_due.py  generate_followups.py  main.py  mark_followup_sent.py  mark_replied.py  mark_sent.py  message_for_lead.py  next_actions.py  pyproject.toml  requirements.txt  run_weekly_pack.py  scorecard_weekly.py  set_followup_today.py
.streamlit/: secrets.toml.example
data/inbox/: leads_sample.csv
src/: actions.py  conversation_log.py  conversation_log.py.bak  followups.py  llm_client.py  messages.py  schemas.py  scoring.py  store.py  ui_messages.py
