[project]
name = "maeva-prospect-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "altair>=6.0.0",
    "autogen-agentchat==0.5.1",
    "autogen-ext[openai]==0.5.1",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "streamlit==1.55.0",
]
